kubernetes/azurite.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: tickets-dev
  name: azurite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azurite
  template:
    metadata:
      labels:
        app: azurite
    spec:
      containers:
      - image: mcr.microsoft.com/azure-storage/azurite:latest
        imagePullPolicy: Always
        name: azurite
        ports:
        - containerPort: 10000
        - containerPort: 10001
---
apiVersion: v1
kind: Service
metadata:
  namespace: tickets-dev
  name: azuriteblob
spec:
  selector:
    app: azurite
  ports:
    - protocol: TCP
      port: 10000
      targetPort: 10000
---
apiVersion: v1
kind: Service
metadata:
  namespace: tickets-dev
  name: azuritequeue
spec:
  selector:
    app: azurite
  ports:
    - protocol: TCP
      port: 10001
      targetPort: 10001
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: tickets-dev
  name: azurite
spec:
  rules:
  - host: azuriteblob.localtest.me
    http:
      paths:
      - backend:
          serviceName: azuriteblob
          servicePort: 10000
  - host: azuritequeu.localtest.me
    http:
      paths:
      - backend:
          serviceName: azuritequeue
          servicePort: 10001
