kubernetes/orleans.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: tickets
  labels:
    app: ticketsilo
  name: ticketsilo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketsilo
  template:
    metadata:
      labels:
        app: ticketsilo
    spec:
      containers:
      - image: ticketsilo:dev
        imagePullPolicy: Never
        name: ticketsilo
        ports:
        - containerPort: 8020
---
apiVersion: v1
kind: Service
metadata:
  namespace: tickets
  name: ticketsilo-dashboard
spec:
  selector:
    app: ticketsilo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8020
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: tickets
  name: ticketsilo-dashboard
spec:
  rules:
  - host: dashboard.localtest.me
    http:
      paths:
      - backend:
          serviceName: ticketsilo-dashboard
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: tickets
  labels:
    app: ticketapi
  name: ticketapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketapi
  template:
    metadata:
      labels:
        app: ticketapi
    spec:
      containers:
      - image: ticketapi:dev
        imagePullPolicy: Never
        name: ticketapi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: tickets
  name: ticketapi
spec:
  selector:
    app: ticketapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: tickets
  name: ticketapi
spec:
  rules:
  - host: ticketapi.localtest.me
    http:
      paths:
      - backend:
          serviceName: ticketapi
          servicePort: 80
